--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
+    "framer-motion": "^5.3.3",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.5",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
